# geometry-dash-game

./: .gitignore  CMakeLists.txt  README.md  design.md  schedule.md
src/: game.cpp  game.h  main.cpp  platform_sdl.cpp  platform_sdl.h  render.cpp  render.h
src/ui/: main_menu_layout.c  pause_menu_layout.c
